# rh-tdd-workshop

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pylintrc  Makefile  Pipfile  README.md  index.html  package-lock.json  package.json  printing_page_parser.py  pyproject.toml  styles.css  test_printing_page_parser.py
.github/workflows/: ai-code-review.yaml  cicd-pipeline.yaml
src/: ParsePrintingPage.js  ParsePrintingPage.test.js  PointCalculator.test.js  PrintingPageParser.js  PrintingPageParser.test.js  index.html  printing_page_parser.py  styles.css  test_printing_page_parser.py
