[tool.poetry]
name = "rh-tdd-workshop"
version = "0.1.0"
description = ""
authors = ["Mr. X <mrx@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-bugbear = "^24.10.31"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-comprehensions = "^3.16.0"
mypy = "^1.13.0"
safety = "^3.2.10"


